...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <!-- Button row -->
    <LinearLayout
        android:id="@+id/button_row"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
...
            android:backgroundTint="@color/purpleText"
            android:text="Joined Events"
            android:textColor="@color/darkPurple"
            android:textSize="12sp" />

        <Button
            android:id="@+id/btn_hosted_events"
            style="?attr/materialButtonOutlinedStyle"
            app:cornerRadius="0dp"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:layout_marginStart="4dp"
...
            android:textColor="@color/darkPurple"
            android:textSize="12sp" />
    </LinearLayout>

    <!-- Scrollable ListView -->
    <ListView
        android:id="@+id/recycler_notifications"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:divider="@android:color/transparent"
        android:dividerHeight="8dp"
        android:clipToPadding="false"
        android:paddingBottom="8dp"
...
        android:weightSum="5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@+id/btn_notification"
            android:layout_width="0dp"
            android:layout_height="58dp"
            android:layout_weight="1"
            android:layout_marginHorizontal="4dp"
            android:backgroundTint="@color/black"
            android:drawableTop="@drawable/ic_notification"
            android:drawablePadding="6dp"
            android:drawableTint="@color/purpleText"
            android:padding="8dp" />

        <Button
            android:id="@+id/btn_events"
            android:layout_width="0dp"
            android:layout_height="58dp"
            android:layout_weight="1"
            android:layout_marginHorizontal="4dp"
            android:backgroundTint="@color/black"
            android:drawableTop="@drawable/ic_events"
            android:drawablePadding="6dp"
            android:drawableTint="@color/purpleText"
            android:padding="8dp" />

        <Button
            android:id="@+id/btn_scan"
            android:layout_width="0dp"
            android:layout_height="58dp"
            android:layout_weight="1"
            android:layout_marginHorizontal="4dp"
            android:backgroundTint="@color/black"
            android:drawableTop="@drawable/ic_scan"
            android:drawablePadding="6dp"
            android:drawableTint="@color/purpleText"
            android:padding="8dp" />

        <Button
            android:id="@+id/btn_addEvent"
            android:layout_width="0dp"
            android:layout_height="58dp"
            android:layout_weight="1"
            android:layout_marginHorizontal="4dp"
            android:backgroundTint="@color/black"
            android:drawableTop="@drawable/ic_addevents"
            android:drawablePadding="6dp"
            android:drawableTint="@color/purpleText"
            android:padding="8dp" />

        <Button
            android:id="@+id/btn_profile"
            android:layout_width="0dp"
            android:layout_height="58dp"
            android:layout_weight="1"
            android:layout_marginHorizontal="4dp"
            android:backgroundTint="@color/black"
            android:drawableTop="@drawable/ic_profile"
...
