...
            <TextView
                android:layout_width="379dp"
                android:layout_height="wrap_content"
                android:text="Event Name *:"
                android:textColor="@color/purpleText"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/et_event_name" />

            <EditText
                android:id="@+id/et_event_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/purpleText"
...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="8dp">

                <CheckBox
                    android:id="@+id/cb_limit_waiting_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Limit number of entrants"
                    android:textColor="@color/purpleText" />

                <EditText
                    android:id="@+id/et_max_entrants"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Enter max number"
                    android:inputType="number"
                    android:textColorHint="@color/darkPurple"
                    android:textColor="@color/purpleText"
...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <Button
                    android:id="@+id/btn_cancel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Cancel"
                    android:backgroundTint="@color/darkPurple"
                    android:textColor="@android:color/white" />

                <Space
                    android:layout_width="12dp"
                    android:layout_height="match_parent" />

                <Button
                    android:id="@+id/btn_create_event"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Create"
                    android:backgroundTint="@color/purpleText"
                    android:textColor="@color/darkPurple" />
...
